--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
 	background-color: #000F08;
 	margin: 0px 0px;
-	margin-top: 0px ;
 	padding: 0px 0px;
 }
 
 nav {
+	margin: 0px 0px;
+	padding: 0px 0px;
 	width: 100%;
 	height: 75px;
 	background-color: #1C3738;
