--- a/style.css
+++ b/style.css
@@ -1,23 +1,34 @@
-body {
-	background-color: #000F08;
-	margin: 0px 0px;
-	padding: 0px 0px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 nav {
-	margin: 0px 0px;
-	padding: 0px 0px;
-	width: 100%;
-	height: 75px;
-	background-color: #1C3738;
+    background-color: #333;
+    overflow: hidden;
 }
 
-ul {
-	list-style: none;
-	text-decoration: none;
+nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
 }
 
-a {
-	color: #F4FFF8;
-	text-decoration: none;
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #575757;
 }
