--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ nav {
     padding: 0;
     display: flex;
     justify-content: center;
+    text-decoration: none;
 }
 
 nav li {
@@ -24,6 +25,7 @@ nav li {
 }
 
 nav li a {
+	text-decoration: none;
     display: block;
     color: #F4FFF8;
     text-align: center;
