--- a/style.css
+++ b/style.css
@@ -5,33 +5,8 @@
     background-color: #000F08;
 }
 
-nav {
-    background-color: #1C3738;
-    overflow: hidden;
-}
-
-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-}
-
-nav li {
-    float: left;
-    text-decoration: none;
-}
-
-nav li a {
-	text-decoration: none;
-    display: block;
-    color: #F4FFF8;
-    text-align: center;
-    padding: 14px 20px;
-}
-
-nav li a:hover {
-    background-color: #575757;
+.navbar {
+	width: 100$;
+	height: 50px;
+	background-color: #1C3738;
 }
