--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #000F08;
+}
+
+body {
+	background-color: #000F08;
+}
 }
 
 .navbar {
